--- a/app/src/main/res/layout/list_snack_fragment.xml
+++ b/app/src/main/res/layout/list_snack_fragment.xml
@@ -7,8 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/grey">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/title"
